--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -608,9 +608,25 @@ spec:
     singular: endpoint
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .spec.reference.externalIDName
+      name: ExternalName
+      type: string
+    - jsonPath: .spec.reference.externalIDValue
+      name: ExternalValue
+      type: string
+    - jsonPath: .status.ips
+      name: IPAddr
+      type: string
+    - jsonPath: .status.macAddress
+      name: MAC
+      type: string
+    name: v1alpha1
     schema:
       openAPIV3Schema:
+        description: Endpoint is a network communication entity. It's provided by
+          the endpoint provider, it could be a virtual network interface, a pod, an
+          ovs port or other entities.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -625,18 +641,25 @@ spec:
           metadata:
             type: object
           spec:
+            description: Spec contains description of the endpoint
             properties:
               reference:
+                description: Reference of an endpoint, also the external_id of an
+                  ovs interface. We map between endpoint and ovs interface use the
+                  Reference.
                 properties:
                   externalIDName:
+                    description: ExternalIDName of an endpoint.
                     type: string
                   externalIDValue:
+                    description: ExternalIDValue of an endpint.
                     type: string
                 required:
                 - externalIDName
                 - externalIDValue
                 type: object
               vid:
+                description: VID describe the endpoint in which VLAN
                 format: int32
                 type: integer
             required:
@@ -644,8 +667,10 @@ spec:
             - vid
             type: object
           status:
+            description: Status is the current state of the Endpoint
             properties:
               ips:
+                description: IPs of an endpoint, can be IPV4 or IPV6.
                 items:
                   description: IPAddress is net ip address, can be ipv4 or ipv6. Format
                     like 192.168.10.12 or fe80::488e:b1ff:fe37:5414
@@ -653,6 +678,7 @@ spec:
                   type: string
                 type: array
               macAddress:
+                description: MACAddress of an endpoint.
                 type: string
             type: object
         required:
@@ -686,7 +712,11 @@ spec:
     singular: globalpolicy
   scope: Cluster
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .spec.defaultAction
+      name: DefaultAction
+      type: string
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: GlobalPolicy allow defines default action of traffics and global
@@ -705,6 +735,7 @@ spec:
           metadata:
             type: object
           spec:
+            description: Specification of the desired behavior for this GlobalPolicy.
             properties:
               defaultAction:
                 default: Allow
@@ -741,6 +772,7 @@ spec:
         type: object
     served: true
     storage: true
+    subresources: {}
 status:
   acceptedNames:
     kind: ""
@@ -765,7 +797,17 @@ spec:
     singular: securitypolicy
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .spec.tier
+      name: Tier
+      type: string
+    - jsonPath: .spec.symmetricMode
+      name: SymmetricMode
+      type: boolean
+    - jsonPath: .spec.policyTypes
+      name: PolicyTypes
+      type: string
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: SecurityPolicy describes what network traffic is allowed for
