fix(k8s-service): redesign the traffic path to enforce rules in k8s services
New Traffic Path:
Out: Pod -> localGw -> Iptables(kube-proxy) -> localGw -> Policy
In : Gateway -> localGw -> Iptables(kube-proxy) -> localGw -> LocalPods

--- a/deploy/everoute-agent/agent.yaml
+++ b/deploy/everoute-agent/agent.yaml
@@ -4,6 +4,7 @@ data:
   agentconfig.yaml: |
     datapathConfig:
       cnibr0: cnibr0
+    localGwIP: 100.64.254.254
   cni-conf.conflist: |
     {
         "cniVersion": "0.3.0",
