--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -1666,6 +1666,7 @@ data:
   agentconfig.yaml: |
     datapathConfig:
       cnibr0: cnibr0
+    localGwIP: 100.64.254.254
   cni-conf.conflist: |
     {
         "cniVersion": "0.3.0",
@@ -1898,6 +1899,8 @@ spec:
       tolerations:
         - key: node-role.kubernetes.io/master
           effect: NoSchedule
+        - key: CriticalAddonsOnly
+          operator: Exists
       serviceAccountName: everoute-controller
       hostNetwork: true
       containers:
