fix(webhook): add webhook controller to sync ca from secret

--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -1944,6 +1944,8 @@ rules:
   verbs:
   - update
   - get
+  - watch
+  - list
 - apiGroups:
     - networking.k8s.io
   resources:
@@ -2095,13 +2097,4 @@ spec:
   selector:
     app: everoute
     component: everoute-controller
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: everoute-controller-tls
-  namespace: kube-system
-type: kubernetes.io/tls
-data:
-  tls.crt: ""
-  tls.key: ""
+
