--- a/deploy/everoute-agent/agent.yaml
+++ b/deploy/everoute-agent/agent.yaml
@@ -103,6 +103,9 @@ spec:
               mountPath: /var/run/openvswitch/
             - name: host-proc
               mountPath: /host/proc/
+            - name: host-netns
+              mountPath: /host/var/run/netns/
+              mountPropagation: HostToContainer
             - name: cni-bin
               mountPath: /opt/cni/bin/
             - name: everoute-ipam
@@ -142,6 +145,9 @@ spec:
         - hostPath:
             path: /proc
           name: host-proc
+        - hostPath:
+            path: /var/run/netns
+          name: host-netns
         - hostPath:
             path: /lib/modules
           name: host-lib-modules
