--- a/deploy/crds/security.everoute.io_securitypolicies.yaml
+++ b/deploy/crds/security.everoute.io_securitypolicies.yaml
@@ -49,7 +49,7 @@ spec:
             properties:
               appliedTo:
                 description: Selects the endpoints to which this SecurityPolicy object
-                  applies. This field must not empty.
+                  applies. Empty or nil means select all endpoints
                 items:
                   description: ApplyToPeer describes sets of endpoints which this
                     SecurityPolicy object applies At least one field (Endpoint or
@@ -115,6 +115,11 @@ spec:
                       type: object
                   type: object
                 type: array
+              disableDefaultRule:
+                default: false
+                description: DisableDefaultRule will generate default DROP rule for
+                  policy
+                type: boolean
               egressRules:
                 description: List of egress rules to be applied to the selected endpoints.
                   If this field is empty then this SecurityPolicy limits all outgoing
@@ -864,6 +869,7 @@ spec:
                 type: string
             required:
             - appliedTo
+            - disableDefaultRule
             - tier
             type: object
         required:
