--- a/deploy/crds/security.everoute.io_securitypolicies.yaml
+++ b/deploy/crds/security.everoute.io_securitypolicies.yaml
@@ -49,7 +49,7 @@ spec:
             properties:
               appliedTo:
                 description: Selects the endpoints to which this SecurityPolicy object
-                  applies. This field must not empty.
+                  applies. Empty or nil means select all endpoints
                 items:
                   description: ApplyToPeer describes sets of endpoints which this
                     SecurityPolicy object applies At least one field (Endpoint or
