ci: add k8s cni e2e in action, runs on self-hosted

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,14 +2,14 @@ name: ci
 
 on:
   pull_request:
-    branches: [main]
+    branches: [ main ]
 
   push:
-    branches: [main]
+    branches: [ main ]
 
 jobs:
   pr-check:
-    runs-on: [ubuntu-20.04]
+    runs-on: [ ubuntu-20.04 ]
 
     steps:
       - uses: actions/checkout@v2
@@ -38,7 +38,7 @@ jobs:
           files: ./coverage.out
 
   golint:
-    runs-on: [ubuntu-20.04]
+    runs-on: [ ubuntu-20.04 ]
     if: ${{ github.event_name == 'pull_request' }}
     steps:
       - uses: actions/checkout@v2
@@ -51,7 +51,7 @@ jobs:
           skip-pkg-cache: true
 
   run-deploy:
-    runs-on: [ubuntu-20.04]
+    runs-on: [ ubuntu-20.04 ]
     steps:
       - uses: actions/checkout@v2
 
@@ -69,7 +69,7 @@ jobs:
         run: make deploy-test
 
   run-e2e:
-    runs-on: [ubuntu-20.04]
+    runs-on: [ ubuntu-20.04 ]
     steps:
       - uses: actions/checkout@v2
 
@@ -85,8 +85,37 @@ jobs:
       - name: run e2e test cases
         run: sudo -H make e2e-test
 
+  run-k8s-e2e:
+    runs-on: self-hosted
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: build everoute and deploy
+        run: sudo skaffold run -d=harbor.smartx.com/everoute
+
+      - name: wait everoute ready
+        run: bash hack/check_ready.sh
+
+      - uses: actions/checkout@v2
+        with:
+          repository: 'kubernetes/kubernetes'
+          ref: 'v1.21.5'
+          path: './kubernetes'
+
+      - name: apply e2e patch
+        run: cd kubernetes && git apply ../hack/0001-test-e2e-add-sleep-before-cannot-conntect-test.patch
+
+      - name: build e2e
+        run: cd kubernetes && make all WHAT=test/e2e/e2e.test && make all WHAT=vendor/github.com/onsi/ginkgo/ginkgo
+
+      - name: remove remained ns in last test
+        run: kubectl get ns | grep "policy\|netpol"  | awk '{print $1}' | xargs kubectl delete ns || echo "finish"
+
+      - name: run test cases
+        run: bash hack/run-k8s-e2e.sh
+
   generate-check:
-    runs-on: [ubuntu-20.04]
+    runs-on: [ ubuntu-20.04 ]
     steps:
       - uses: actions/checkout@v2
 
