--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -1612,6 +1612,10 @@ spec:
     matchLabels:
       app: everoute
       component: everoute-agent
+  updateStrategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1024
   template:
     metadata:
       labels:
