--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -145,17 +145,17 @@ jobs:
       RESULT_RUN_K8S_E2E: ":white_check_mark:"
       RESULT_GENERATE_CHECK: ":white_check_mark:"
     steps:
-      - if: ${{ needs.pr-check.result != 'success'}}
+      - if: ${{ needs.pr-check.result == 'failure'}}
         run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_PR_CHECK=:x:" >> $GITHUB_ENV
-      - if: ${{ needs.golint.result != 'success'}}
+      - if: ${{ needs.golint.result == 'failure'}}
         run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_GOLINT=:x:" >> $GITHUB_ENV
-      - if: ${{ needs.run-deploy.result != 'success'}}
+      - if: ${{ needs.run-deploy.result == 'failure'}}
         run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_RUN_DEPLOY=:x:" >> $GITHUB_ENV
-      - if: ${{ needs.run-e2e.result != 'success'}}
+      - if: ${{ needs.run-e2e.result == 'failure'}}
         run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_RUN_E2E=:x:" >> $GITHUB_ENV
-      - if: ${{ needs.run-k8s-e2e.result != 'success'}}
+      - if: ${{ needs.run-k8s-e2e.result == 'failure'}}
         run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_RUN_K8S_E2E=:x:" >> $GITHUB_ENV
-      - if: ${{ needs.generate-check.result != 'success'}}
+      - if: ${{ needs.generate-check.result == 'failure'}}
         run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_GENERATE_CHECK=:x:" >> $GITHUB_ENV
 
       - name: generate short commit sha
