--- a/deploy/crds/security.everoute.io_endpoints.yaml
+++ b/deploy/crds/security.everoute.io_endpoints.yaml
@@ -84,6 +84,11 @@ spec:
           status:
             description: Status is the current state of the Endpoint
             properties:
+              agents:
+                description: Agents where this endpoint is currently located
+                items:
+                  type: string
+                type: array
               ips:
                 description: IPs of an endpoint, can be IPV4 or IPV6.
                 items:
@@ -93,7 +98,7 @@ spec:
                   type: string
                 type: array
               macAddress:
-                description: MACAddress of an endpoint.
+                description: MacAddress of an endpoint.
                 type: string
             type: object
         required:
