--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -1665,6 +1665,11 @@ spec:
           args:
             - --enable-cni=true
             - -v=0
+          env:
+            - name: NODE_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
           securityContext:
             privileged: true
           volumeMounts:
