add policy enforcement mode support

--- a/deploy/crds/security.everoute.io_globalpolicies.yaml
+++ b/deploy/crds/security.everoute.io_globalpolicies.yaml
@@ -48,6 +48,11 @@ spec:
                 - Allow
                 - Drop
                 type: string
+              globalPolicyEnforcementMode:
+                description: GlobalPolicy enforcement mode
+                type: string
+            required:
+            - globalPolicyEnforcementMode
             type: object
         type: object
     served: true
