--- a/deploy/crds/security.everoute.io_securitypolicies.yaml
+++ b/deploy/crds/security.everoute.io_securitypolicies.yaml
@@ -862,6 +862,10 @@ spec:
                     This type is beta-level in 1.8
                   type: string
                 type: array
+              securityPolicyEnforcementMode:
+                description: 'Work mode specify the policy enforcement state: monitor
+                  or work'
+                type: string
               symmetricMode:
                 description: SymmetricMode will generate symmetry rules for the policy.
                   Defaults to false.
