feat: add endpoint agent in GroupMember

--- a/deploy/crds/group.everoute.io_groupmembers.yaml
+++ b/deploy/crds/group.everoute.io_groupmembers.yaml
@@ -30,6 +30,10 @@ spec:
               description: GroupMember represents resource member to be populated
                 in Groups.
               properties:
+                endpointAgent:
+                  items:
+                    type: string
+                  type: array
                 endpointReference:
                   description: EndpointReference maintains the reference to the Endpoint.
                   properties:
