--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -327,6 +327,10 @@ spec:
               description: GroupMember represents resource member to be populated
                 in Groups.
               properties:
+                endpointAgent:
+                  items:
+                    type: string
+                  type: array
                 endpointReference:
                   description: EndpointReference maintains the reference to the Endpoint.
                   properties:
@@ -398,6 +402,10 @@ spec:
               description: GroupMember represents resource member to be populated
                 in Groups.
               properties:
+                endpointAgent:
+                  items:
+                    type: string
+                  type: array
                 endpointReference:
                   description: EndpointReference maintains the reference to the Endpoint.
                   properties:
@@ -450,6 +458,10 @@ spec:
               description: GroupMember represents resource member to be populated
                 in Groups.
               properties:
+                endpointAgent:
+                  items:
+                    type: string
+                  type: array
                 endpointReference:
                   description: EndpointReference maintains the reference to the Endpoint.
                   properties:
@@ -477,6 +489,10 @@ spec:
               description: GroupMember represents resource member to be populated
                 in Groups.
               properties:
+                endpointAgent:
+                  items:
+                    type: string
+                  type: array
                 endpointReference:
                   description: EndpointReference maintains the reference to the Endpoint.
                   properties:
