feat(agent): filter policy rules DO NOT related to current agent

--- a/deploy/crds/group.everoute.io_groupmembers.yaml
+++ b/deploy/crds/group.everoute.io_groupmembers.yaml
@@ -31,6 +31,8 @@ spec:
                 in Groups.
               properties:
                 endpointAgent:
+                  description: EndpointAgent means where this groupMember may appear.
+                    if this fields is empty, this member will apply to all agent.
                   items:
                     type: string
                   type: array
