--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -328,6 +328,8 @@ spec:
                 in Groups.
               properties:
                 endpointAgent:
+                  description: EndpointAgent means where this groupMember may appear.
+                    if this fields is empty, this member will apply to all agent.
                   items:
                     type: string
                   type: array
@@ -403,6 +405,8 @@ spec:
                 in Groups.
               properties:
                 endpointAgent:
+                  description: EndpointAgent means where this groupMember may appear.
+                    if this fields is empty, this member will apply to all agent.
                   items:
                     type: string
                   type: array
@@ -459,6 +463,8 @@ spec:
                 in Groups.
               properties:
                 endpointAgent:
+                  description: EndpointAgent means where this groupMember may appear.
+                    if this fields is empty, this member will apply to all agent.
                   items:
                     type: string
                   type: array
@@ -490,6 +496,8 @@ spec:
                 in Groups.
               properties:
                 endpointAgent:
+                  description: EndpointAgent means where this groupMember may appear.
+                    if this fields is empty, this member will apply to all agent.
                   items:
                     type: string
                   type: array
