--- a/deploy/crds/group.everoute.io_groupmemberspatches.yaml
+++ b/deploy/crds/group.everoute.io_groupmemberspatches.yaml
@@ -26,6 +26,8 @@ spec:
                 in Groups.
               properties:
                 endpointAgent:
+                  description: EndpointAgent means where this groupMember may appear.
+                    if this fields is empty, this member will apply to all agent.
                   items:
                     type: string
                   type: array
@@ -82,6 +84,8 @@ spec:
                 in Groups.
               properties:
                 endpointAgent:
+                  description: EndpointAgent means where this groupMember may appear.
+                    if this fields is empty, this member will apply to all agent.
                   items:
                     type: string
                   type: array
@@ -113,6 +117,8 @@ spec:
                 in Groups.
               properties:
                 endpointAgent:
+                  description: EndpointAgent means where this groupMember may appear.
+                    if this fields is empty, this member will apply to all agent.
                   items:
                     type: string
                   type: array
