refactor: update work mode default value etc
1. remove ingress and egress drop table
2. update securitypolicy crd with default work mode
3. constant default work mode in internel policy and agent test

Signed-off-by: echken <echken@localhost.localdomain>

--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -1547,11 +1547,12 @@ spec:
                   that include "Egress" (since such a policy would not include an
                   Egress section and would otherwise default to just [ "Ingress" ]).
                 items:
-                  description: PolicyType string describes the NetworkPolicy type
+                  description: Policy Type string describes the NetworkPolicy type
                     This type is beta-level in 1.8
                   type: string
                 type: array
               securityPolicyEnforcementMode:
+                default: work
                 description: 'Work mode specify the policy enforcement state: monitor
                   or work'
                 type: string
