ci: add ci for all pull request branch

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,8 @@ name: ci
 
 on:
   pull_request:
-    branches: [ main, release-1.0 ]
+    branches:
+      - '**'
 
   push:
     branches: [ main, release-1.0 ]
