test: fix test cases
Signed-off-by: zwtop <wang.zhan@smartx.com>

--- a/deploy/crds/security.everoute.io_globalpolicies.yaml
+++ b/deploy/crds/security.everoute.io_globalpolicies.yaml
@@ -49,10 +49,9 @@ spec:
                 - Drop
                 type: string
               globalPolicyEnforcementMode:
+                default: work
                 description: GlobalPolicy enforcement mode
                 type: string
-            required:
-            - globalPolicyEnforcementMode
             type: object
         type: object
     served: true
