--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -720,10 +720,9 @@ spec:
                 - Drop
                 type: string
               globalPolicyEnforcementMode:
+                default: work
                 description: GlobalPolicy enforcement mode
                 type: string
-            required:
-            - globalPolicyEnforcementMode
             type: object
         type: object
     served: true
