--- a/deploy/crds/group.everoute.io_groupmembers.yaml
+++ b/deploy/crds/group.everoute.io_groupmembers.yaml
@@ -32,7 +32,7 @@ spec:
               properties:
                 endpointAgent:
                   description: EndpointAgent means where this groupMember may appear.
-                    if this fields is empty, this member will apply to all agent.
+                    if this field is empty, this group member will apply to all agents.
                   items:
                     type: string
                   type: array
