--- a/deploy/crds/group.everoute.io_groupmemberspatches.yaml
+++ b/deploy/crds/group.everoute.io_groupmemberspatches.yaml
@@ -27,7 +27,7 @@ spec:
               properties:
                 endpointAgent:
                   description: EndpointAgent means where this groupMember may appear.
-                    if this fields is empty, this member will apply to all agent.
+                    if this field is empty, this group member will apply to all agents.
                   items:
                     type: string
                   type: array
@@ -85,7 +85,7 @@ spec:
               properties:
                 endpointAgent:
                   description: EndpointAgent means where this groupMember may appear.
-                    if this fields is empty, this member will apply to all agent.
+                    if this field is empty, this group member will apply to all agents.
                   items:
                     type: string
                   type: array
@@ -118,7 +118,7 @@ spec:
               properties:
                 endpointAgent:
                   description: EndpointAgent means where this groupMember may appear.
-                    if this fields is empty, this member will apply to all agent.
+                    if this field is empty, this group member will apply to all agents.
                   items:
                     type: string
                   type: array
