fix(cni): add support for nftables
Signed-off-by: Changliang Wu <changliang.wu@smartx.com>

--- a/deploy/everoute-agent/agent.yaml
+++ b/deploy/everoute-agent/agent.yaml
@@ -84,6 +84,7 @@ spec:
               subPath: agentconfig.yaml
             - mountPath: /lib/modules
               name: host-lib-modules
+              readOnly: true
             - name: tmp
               mountPath: /tmp
         - name: everoute-agent
@@ -121,6 +122,8 @@ spec:
               mountPath: /var/lib/cni/networks/everoute
             - name: tmp
               mountPath: /tmp
+            - name: xtables-lock
+              mountPath: /run/xtables.lock
       tolerations:
         - key: CriticalAddonsOnly
           operator: Exists
@@ -160,3 +163,7 @@ spec:
         - hostPath:
             path: /lib/modules
           name: host-lib-modules
+        - hostPath:
+            path: /run/xtables.lock
+            type: FileOrCreate
+          name: xtables-lock
