--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -1656,6 +1656,7 @@ spec:
               subPath: agentconfig.yaml
             - mountPath: /lib/modules
               name: host-lib-modules
+              readOnly: true
             - name: tmp
               mountPath: /tmp
         - name: everoute-agent
@@ -1688,6 +1689,8 @@ spec:
               mountPath: /var/lib/cni/networks/everoute
             - name: tmp
               mountPath: /tmp
+            - name: xtables-lock
+              mountPath: /run/xtables.lock
       tolerations:
         - key: CriticalAddonsOnly
           operator: Exists
@@ -1727,6 +1730,10 @@ spec:
         - hostPath:
             path: /lib/modules
           name: host-lib-modules
+        - hostPath:
+            path: /run/xtables.lock
+            type: FileOrCreate
+          name: xtables-lock
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
