--- a/deploy/everoute-agent/role.yaml
+++ b/deploy/everoute-agent/role.yaml
@@ -49,3 +49,17 @@ rules:
     - list
     - watch
     - create
+- apiGroups:
+    - activeprobe.everoute.io
+  resources:
+    - activeprobes
+    - activeprobes/status
+  verbs:
+    - patch
+    - create
+    - update
+    - delete
+    - get
+    - list
+    - watch
+
